Clarifies workflow name to specify local builds
Updates the workflow name for improved clarity,
indicating it handles both local builds and releases for the Electron app.
Helps distinguish this workflow from others in environments with multiple pipelines.

--- a/.github/workflows/Build-MyRunners.yml
+++ b/.github/workflows/Build-MyRunners.yml
@@ -1,4 +1,4 @@
-name: Build and Release Electron App
+name: Build Local and Release Electron App (My Runners)
 
 concurrency:
   group: build-${{ github.ref }}
