--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -614,7 +614,7 @@ jobs:
 
       - name: Create or update release with distributable builds
         id: release
-        uses: softprops/action-gh-release@d5382d3e6f2fa7bd53cb749d33091853d4985daf # v2.3.0
+        uses: softprops/action-gh-release@v2.2.2 # v2.2.2
         with:
           tag_name: v${{ needs.bump-version.outputs.new_version }}
           name: FitFileViewer v${{ needs.bump-version.outputs.new_version }}
