--- a/.github/workflows/VirusTotal.yml
+++ b/.github/workflows/VirusTotal.yml
@@ -9,6 +9,8 @@ on:
     workflows: ["Build and Release Electron App"]
     types:
       - completed
+  schedule:
+    - cron: "33 3 1 * *" # Every month at 3:33 AM UTC
 
 permissions:
   contents: read
