--- a/.github/workflows/upload-linux-ia.yml
+++ b/.github/workflows/upload-linux-ia.yml
@@ -11,6 +11,9 @@ concurrency:
   group: IALINUX-${{ github.ref }}
   cancel-in-progress: true
 
+permissions:
+  contents: read
+
 jobs:
   upload-linux:
     runs-on: ubuntu-latest
