--- a/.github/workflows/print-release-asset-sizes.yml
+++ b/.github/workflows/print-release-asset-sizes.yml
@@ -33,8 +33,8 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           bash: bash
         run: |-
-          echo "| Release Tag | Size (MB) | Size (GB) | Downloads |" > sizes.md
-          echo "|------------|-----------|-----------|-----------|" >> sizes.md
+          printf '| Release Tag | Size (MB) | Size (GB) | Downloads |\n' > sizes.md
+          printf '|------------|-----------|-----------|-----------|\n' >> sizes.md
           total_size=0
           total_downloads=0
           for tag in $(gh release list --limit 1000 --json tagName -q '.[].tagName'); do
@@ -51,28 +51,30 @@ jobs:
             done
             release_size_mb=$(awk "BEGIN {printf \"%.2f\", $release_size/1024/1024}")
             release_size_gb=$(awk "BEGIN {printf \"%.3f\", $release_size/1024/1024/1024}")
-            echo "| $tag | $release_size_mb | $release_size_gb | $release_downloads |" >> sizes.md
+            printf '| %s | %s | %s | %s |\n' "$tag" "$release_size_mb" "$release_size_gb" "$release_downloads" >> sizes.md
           done
           total_size_mb=$(awk "BEGIN {printf \"%.2f\", $total_size/1024/1024}")
           total_size_gb=$(awk "BEGIN {printf \"%.3f\", $total_size/1024/1024/1024}")
-          echo "\n**Total asset size across all releases:** $total_size bytes ($total_size_mb MB, $total_size_gb GB)" >> sizes.md
-          echo "**Total downloads across all releases:** $total_downloads" >> sizes.md
+          printf '\n**Total asset size across all releases:** %s bytes (%s MB, %s GB)\n' "$total_size" "$total_size_mb" "$total_size_gb" >> sizes.md
+          printf '**Total downloads across all releases:** %s\n' "$total_downloads" >> sizes.md
       - name: Print summary table to GitHub Actions summary
         run: |
-          echo "## 🚀 Release Asset Size Report" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "| Release Tag | Size (MB) | Size (GB) | Downloads |" >> $GITHUB_STEP_SUMMARY
-          echo "|------------|-----------|-----------|-----------|" >> $GITHUB_STEP_SUMMARY
-          tail -n +3 sizes.md | grep -v '^\*\*Total' >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          total_size=$(grep -oP '(?<=Total asset size across all releases:\*\*)[0-9]+' sizes.md | head -1)
-          total_size_mb=$(grep -oP '(?<=\()[0-9.]+ MB' sizes.md | head -1)
-          total_size_gb=$(grep -oP '(?<=, )[0-9.]+ GB' sizes.md | head -1)
-          total_downloads=$(grep -oP '(?<=Total downloads across all releases:\*\*)[0-9]+' sizes.md | head -1)
-          echo "---" >> $GITHUB_STEP_SUMMARY
-          echo "### 📊 Totals" >> $GITHUB_STEP_SUMMARY
-          echo "- **Total asset size:** $total_size bytes ($total_size_mb, $total_size_gb)" >> $GITHUB_STEP_SUMMARY
-          echo "- **Total downloads:** $total_downloads" >> $GITHUB_STEP_SUMMARY
+          {
+            echo "## 🚀 Release Asset Size Report"
+            echo ""
+            echo "| Release Tag | Size (MB) | Size (GB) | Downloads |"
+            echo "|------------|-----------|-----------|-----------|"
+            tail -n +3 sizes.md | grep -v '^\*\*Total'
+            echo ""
+            total_size=$(grep -oP '(?<=Total asset size across all releases:\*\*)[0-9]+' sizes.md | head -1)
+            total_size_mb=$(grep -oP '(?<=\()[0-9.]+ MB' sizes.md | head -1)
+            total_size_gb=$(grep -oP '(?<=, )[0-9.]+ GB' sizes.md | head -1)
+            total_downloads=$(grep -oP '(?<=Total downloads across all releases:\*\*)[0-9]+' sizes.md | head -1)
+            echo "---"
+            echo "### 📊 Totals"
+            echo "- **Total asset size:** $total_size bytes ($total_size_mb, $total_size_gb)"
+            echo "- **Total downloads:** $total_downloads"
+          } >> "$GITHUB_STEP_SUMMARY"
 
       - name: Upload sizes.md as artifact
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
