--- a/.github/workflows/vscode-version.yml
+++ b/.github/workflows/vscode-version.yml
@@ -6,7 +6,7 @@ name: VSCode Version Matrix
 on:
   workflow_dispatch:
   schedule:
-    - cron: "33 3 * * 0" # Runs at 03:33 (UTC) on Sundays
+    - cron: "33 3 1 * *" # Every month at 3:33 AM UTC
 
 concurrency:
   group: vscode-version-${{ github.ref }}
