fix: Update Build and Update ChangeLogs workflows to refine paths and remove unnecessary status checks

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -11,6 +11,8 @@ on:
     paths-ignore:
       - "*"
       - "*/**"
+      - "!electron-app/icons/**"
+      - "!electron-app/icons"
       - "!electron-app/**"
       - "!electron-app"
   workflow_dispatch:
