--- a/.github/workflows/updateChangeLogs.yml
+++ b/.github/workflows/updateChangeLogs.yml
@@ -31,6 +31,22 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
+      - name: Create Check Run
+        id: create_check
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          CHECKID=$(gh api -X POST -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            -f name='Update ChangeLogs' \
+            -f head_sha='${{ github.sha }}' \
+            -f status='in_progress' \
+            -f 'output[title]=Update ChangeLogs' \
+            -f 'output[summary]=Changelog update in progress' \
+            --jq '.id' \
+            /repos/${{ github.repository }}/check-runs)
+          echo "CHECKID=$CHECKID" >> $GITHUB_ENV
+
       - name: Set up Node.js
         uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
         with:
@@ -59,3 +75,39 @@ jobs:
           add-paths: '**/CHANGELOG.md'
           delete-branch: false
           token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Update Check Run - Changelogs Generated
+        if: success()
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          gh api -X PATCH -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            /repos/${{ github.repository }}/check-runs/$CHECKID \
+            --input - <<- EOF
+            {
+              "status": "in_progress",
+              "output": {
+                "title": "Update ChangeLogs",
+                "summary": "Changelogs generated. Creating PR..."
+              }
+            }
+            EOF
+
+      - name: Complete Check Run
+        if: always()
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          gh api -X PATCH -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            /repos/${{ github.repository }}/check-runs/$CHECKID \
+            --input - <<- EOF
+            {
+              "conclusion": "success",
+              "output": {
+                "title": "Update ChangeLogs",
+                "summary": "Changelog update workflow completed successfully."
+              }
+            }
+            EOF
