--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -45,7 +45,7 @@ jobs:
             ${{ runner.os }}-electron-app-node-modules-
 
       - name: Install Prettier
-        run: npm install --no-save prettier
+        run: npm install --no-save prettier@3.2.5
 
       - name: Prettify code
         uses: creyD/prettier_action@8c18391fdc98ed0d884c6345f03975edac71b8f0 # v4.6
