--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -15,6 +15,8 @@ on:
       - "!electron-app/icons"
       - "!electron-app/**"
       - "!electron-app"
+      - "**/CHANGELOG.md"
+      - "CHANGELOG.md"
   workflow_dispatch:
     inputs:
       branch:
@@ -326,15 +328,6 @@ jobs:
           include-hidden-files: true
         continue-on-error: true
 
-      - name: Initialize Build Matrix Summary Table
-        if: ${{ matrix.os == 'ubuntu-latest' && matrix.arch == 'x64' }}
-        run: |
-          echo "## 🏗️ Build and Release Electron App Workflow Summary" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "### Build Matrix Results" >> $GITHUB_STEP_SUMMARY
-          echo "| Version | OS | Arch | Build Status |" >> $GITHUB_STEP_SUMMARY
-          echo "|---------|----|------|--------------|" >> $GITHUB_STEP_SUMMARY
-
       - name: Update Build Matrix Summary (per platform/arch)
         if: always()
         shell: bash
@@ -346,7 +339,7 @@ jobs:
           elif [ "${{ steps.build_app.outcome }}" = "success" ]; then
             STATUS="success"
           fi
-          echo "| ${{ needs.bump-version.outputs.new_version }} | ${{ matrix.os }} | ${{ matrix.arch }} | $STATUS |" >> $GITHUB_STEP_SUMMARY
+            echo "| ${{ needs.bump-version.outputs.new_version }} | ${{ matrix.os }} | ${{ matrix.arch }} | Build Status: $STATUS |" >> $GITHUB_STEP_SUMMARY
 
   release:
     needs: [build, bump-version]
@@ -758,9 +751,127 @@ jobs:
           echo "## 🏗️ Build and Release Electron App Workflow Summary" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "See above for the full build matrix results."
-          echo "---" >> $GITHUB_STEP_SUMMARY
-          echo "- **Version bump and tagging** performed for electron-app." >> $GITHUB_STEP_SUMMARY
+          echo "---" >> $GITHUB_STEP_SUMMARY          echo "- **Version bump and tagging** performed for electron-app." >> $GITHUB_STEP_SUMMARY
           echo "- **Builds executed** for multiple OS and architectures." >> $GITHUB_STEP_SUMMARY
           echo "- **Build artifacts uploaded** for each platform." >> $GITHUB_STEP_SUMMARY
           echo "- **Release created** if build and version bump succeeded." >> $GITHUB_STEP_SUMMARY
+          echo "- **Changelogs will be updated** and committed directly to the repository." >> $GITHUB_STEP_SUMMARY
           echo "- Workflow completed with status: ${{ job.status }}" >> $GITHUB_STEP_SUMMARY
+  update-changelogs:
+    needs: [release, bump-version]
+    if: ${{ needs.release.result == 'success' && needs.bump-version.result == 'success' }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Harden the runner (Audit all outbound calls)
+        uses: step-security/harden-runner@0634a2670c59f64b4a01f0f96f84700a4088b9f0 # v2.12.0
+        with:
+          egress-policy: audit
+
+      - name: Checkout repository
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          ref: ${{ github.event.inputs.branch || github.ref }}
+          fetch-depth: 0
+
+      - name: Create Check Run
+        id: create_check
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          CHECKID=$(gh api -X POST -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            -f name='Update ChangeLogs' \
+            -f head_sha='${{ github.sha }}' \
+            -f status='in_progress' \
+            -f 'output[title]=Update ChangeLogs' \
+            -f 'output[summary]=Changelog update in progress' \
+            --jq '.id' \
+            /repos/${{ github.repository }}/check-runs)
+          echo "CHECKID=$CHECKID" >> $GITHUB_ENV
+
+      - name: Set up Node.js
+        uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
+        with:
+          node-version: '20'
+
+      - name: Install git-cliff
+        run: npm install -g git-cliff
+
+      - name: Generate CHANGELOG.md files
+        run: |
+          npx git-cliff --config cliff.toml --output CHANGELOG.md
+          cd electron-app && npx git-cliff --config ../cliff.toml --output CHANGELOG.md && cd ..
+          cd electron-app/icons && npx git-cliff --config ../../cliff.toml --output CHANGELOG.md && cd ../..
+          cd electron-app/libs && npx git-cliff --config ../../cliff.toml --output CHANGELOG.md && cd ../..
+          cd electron-app/screenshots && npx git-cliff --config ../../cliff.toml --output CHANGELOG.md && cd ../..
+          cd electron-app/tests && npx git-cliff --config ../../cliff.toml --output CHANGELOG.md && cd ../..
+          cd electron-app/utils && npx git-cliff --config ../../cliff.toml --output CHANGELOG.md && cd ../..
+
+      - name: Commit and push changelog updates
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          
+          # Add all CHANGELOG.md files
+          git add **/CHANGELOG.md CHANGELOG.md
+          
+          # Check if there are any changes to commit
+          if git diff --staged --quiet; then
+            echo "No changelog changes to commit"
+          else
+            git commit -m "chore: update changelogs for v${{ needs.bump-version.outputs.new_version }} [skip ci]"
+            git push origin ${{ github.event.inputs.branch || github.ref_name }}
+            echo "Changelogs updated and pushed to repository"
+          fi
+
+      - name: Update Check Run - Changelogs Generated
+        if: success()
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          echo '{
+            "status": "in_progress",
+            "output": {
+              "title": "Update ChangeLogs",
+              "summary": "Changelogs generated for v${{ needs.bump-version.outputs.new_version }} and committed to repository"
+            }
+          }' | gh api -X PATCH -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            /repos/${{ github.repository }}/check-runs/$CHECKID --input -
+
+      - name: Complete Check Run
+        if: always()
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          CONCLUSION="success"
+          if [ "${{ job.status }}" != "success" ]; then
+            CONCLUSION="failure"
+          fi
+          echo '{
+            "conclusion": "'$CONCLUSION'",
+            "output": {
+              "title": "Update ChangeLogs",
+              "summary": "Changelog update workflow completed with status: ${{ job.status }}"
+            }
+          }' | gh api -X PATCH -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            /repos/${{ github.repository }}/check-runs/$CHECKID --input -
+
+      - name: Add Changelog Job Summary
+        if: always()
+        run: |
+          echo "## 📝 Changelog Update Summary" >> $GITHUB_STEP_SUMMARY
+          echo "- **Version**: v${{ needs.bump-version.outputs.new_version }}" >> $GITHUB_STEP_SUMMARY
+          echo "- **CHANGELOG.md files** generated for root and all subdirectories" >> $GITHUB_STEP_SUMMARY
+          echo "- **Changes committed** directly to repository (no PR required)" >> $GITHUB_STEP_SUMMARY
+          echo "- **Status**: ${{ job.status }}" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### Files Updated:" >> $GITHUB_STEP_SUMMARY
+          echo "- \`/CHANGELOG.md\`" >> $GITHUB_STEP_SUMMARY
+          echo "- \`/electron-app/CHANGELOG.md\`" >> $GITHUB_STEP_SUMMARY
+          echo "- \`/electron-app/icons/CHANGELOG.md\`" >> $GITHUB_STEP_SUMMARY
+          echo "- \`/electron-app/libs/CHANGELOG.md\`" >> $GITHUB_STEP_SUMMARY
+          echo "- \`/electron-app/screenshots/CHANGELOG.md\`" >> $GITHUB_STEP_SUMMARY
+          echo "- \`/electron-app/tests/CHANGELOG.md\`" >> $GITHUB_STEP_SUMMARY
+          echo "- \`/electron-app/utils/CHANGELOG.md\`" >> $GITHUB_STEP_SUMMARY
