--- a/.github/workflows/print-release-asset-sizes.yml
+++ b/.github/workflows/print-release-asset-sizes.yml
@@ -1,7 +1,7 @@
 name: Print Release Asset Sizes
 
 on:
-  workflow_dispatch: null
+  workflow_dispatch:
   schedule:
     -
       cron: '32 4 * * *'
