--- a/.github/workflows/scorecards.yml
+++ b/.github/workflows/scorecards.yml
@@ -38,7 +38,25 @@ on:
     - cron: "20 7 * * 2"
   push:
     branches: ["main"]
+    paths-ignore:
+      - "*"
+      - "*/**"
+      - "!electron-app/icons/**"
+      - "!electron-app/icons"
+      - "!electron-app/**"
+      - "!electron-app"
+      - "**/CHANGELOG.md"
+      - "CHANGELOG.md"
   pull_request:
+    paths-ignore:
+      - "*"
+      - "*/**"
+      - "!electron-app/icons/**"
+      - "!electron-app/icons"
+      - "!electron-app/**"
+      - "!electron-app"
+      - "**/CHANGELOG.md"
+      - "CHANGELOG.md"
   workflow_dispatch:
 
 # Declare default permissions as read only.
