--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -27,6 +27,11 @@ name: Mark stale issues and pull requests
 on:
   schedule:
     - cron: "38 7 * * *"
+  pull_request_target:
+    types: [opened, reopened, synchronize]
+  issues:
+    types: [opened, reopened, edited]
+  workflow_dispatch:
 
 permissions:
   contents: read
