--- a/.github/workflows/summary.yml
+++ b/.github/workflows/summary.yml
@@ -2,7 +2,12 @@ name: Summarize new issues
 
 on:
   issues:
-    types: [opened]
+    types: [opened, edited]
+  workflow_dispatch:
+  pull_request_target:
+    types: [opened, edited]
+  discussion:
+    types: [created, edited]
 
 jobs:
   summary:
