--- a/.github/workflows/trufflehog.yml
+++ b/.github/workflows/trufflehog.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
   pull_request:
+  workflow_dispatch:
+  schedule:
+    - cron: '44 4 * * 0' # Runs every Sunday at midnight UTC; https://crontab.guru/#0_0_*_*_0
 
 permissions:
   contents: read
