Enhances UI polish, modals, and notification system
Modernizes the UI with improved notification styles, icons, and queue management for better user feedback. Revamps the about modal with togglable system info and feature views, and introduces a dedicated, animated keyboard shortcuts modal. Refines initialization, error handling, and performance monitoring in the renderer process for greater robustness and developer experience. Updates style and linting configurations to support new visual components and ensures accessibility and consistency across dialogs.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,4 +9,31 @@
 	},
 	// Turn off tsc task auto detection since we have the necessary tasks as npm scripts
 	"typescript.tsc.autoDetect": "off",
+	
+	// GitHub Copilot Configuration
+	"github.copilot.chat.codeGeneration.instructions": "Follow the comprehensive coding guidelines and architectural patterns defined in the copilot-instructions.md file at the project root. Focus exclusively on the FitFileViewer Electron application located in the root and electron-app/ directories. Ignore fit-test-files/, vscode-extension/, vis/, and other non-core project folders. Use the established modular architecture with utilities in utils/, follow the ES6+ module patterns, implement proper error handling, support the theme system, and maintain the security model with context isolation. Prioritize performance, accessibility, and cross-platform compatibility. Reference existing patterns in main.js, renderer.js, preload.js, and the utils/ modules when suggesting code changes.",
+	
+	"github.copilot.chat.localeOverride": "en",
+	"github.copilot.enable": {
+		"*": true,
+		"markdown": true,
+		"javascript": true,
+		"typescript": true,
+		"json": true,
+		"jsonc": true,
+		"css": true,
+		"html": true
+	},
+	
+	// Project-specific file associations for better Copilot context
+	"files.associations": {
+		"*.mjs": "javascript",
+		"copilot-instructions.md": "markdown"
+	},
+	
+	// Enhanced IntelliSense for the project
+	"typescript.preferences.includePackageJsonAutoImports": "on",
+	"javascript.preferences.includePackageJsonAutoImports": "on",
+	"javascript.suggest.autoImports": true,
+	"typescript.suggest.autoImports": true
 }
