Revamps Chart.js integration with advanced controls and exports
Overhauls the chart rendering system to add a modern, toggleable controls panel, advanced export and sharing options (PNG, CSV, JSON, ZIP, clipboard, Imgur), and improved accessibility and error handling. Introduces support for zone data visualization, lap analysis charts, and professional styling with theme-aware design. Optimizes performance, code structure, and user feedback for a richer FIT file data experience.

Fixes chart layout, enhances maintainability, and prepares for future extensibility.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,8 +12,8 @@ updates:
 - package-ecosystem: github-actions
   directory: /
   schedule:
-    interval: weekly
-    time: "04:30"
+    interval: daily
+    time: "05:30"
     timezone: "America/Detroit"
   assignees: [ "Nick2bad4u" ]
   allow:
@@ -21,6 +21,8 @@ updates:
   - dependency-type: "all"
   labels:
   - "github-actions"
+  - "dependabot"
+  - "dependencies"
   commit-message:
     prefix: "[ci]"
     prefix-development: "[ci]"
@@ -34,14 +36,21 @@ updates:
 - package-ecosystem: npm
   directory: /electron-app
   schedule:
-    interval: weekly
-  reviewers: [ "Nick2bad4u" ]
+    interval: daily
+  assignees: [ "Nick2bad4u" ]
   versioning-strategy: increase
   allow:
   # Allow both direct and indirect updates for all packages
   - dependency-type: "all"
+  ignore:
+  - dependency-name: "electron-builder"
+    versions: [ "< 26.0.16" ]
+  - dependency-name: "electron-builder-squirrel-windows"
+    versions: [ "< 26.0.16" ]
   labels:
   - "npm"
+  - "dependabot"
+  - "dependencies"
   commit-message:
     prefix: "[dependency]"
     prefix-development: "[dev-dependency]"
