--- a/.github/workflows/updateChangeLogs.yml
+++ b/.github/workflows/updateChangeLogs.yml
@@ -17,7 +17,7 @@ permissions:
 
 jobs:
   update_changelogs:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - name: Harden the runner (Audit all outbound calls)
         uses: step-security/harden-runner@002fdce3c6a235733a90a27c80493a3241e56863 # v2.12.1
@@ -31,17 +31,18 @@ jobs:
         id: create_check
         env:
           GH_TOKEN: ${{ github.token }}
+        shell: pwsh
         run: |
-          CHECKID=$(gh api -X POST -H "Accept: application/vnd.github+json" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            -f name='Update ChangeLogs' \
-            -f head_sha='${{ github.sha }}' \
-            -f status='in_progress' \
-            -f 'output[title]=Update ChangeLogs' \
-            -f 'output[summary]=Changelog update in progress' \
-            --jq '.id' \
-            /repos/${{ github.repository }}/check-runs)
-          echo "CHECKID=$CHECKID" >> $GITHUB_ENV
+          $checkId = gh api -X POST -H "Accept: application/vnd.github+json" `
+            -H "X-GitHub-Api-Version: 2022-11-28" `
+            -f name='Update ChangeLogs' `
+            -f head_sha='${{ github.sha }}' `
+            -f status='in_progress' `
+            -f 'output[title]=Update ChangeLogs' `
+            -f 'output[summary]=Changelog update in progress' `
+            --jq '.id' `
+            /repos/${{ github.repository }}/check-runs
+          echo "CHECKID=$checkId" | Out-File -FilePath $env:GITHUB_ENV -Append
 
       - name: Set up Node.js
         uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
@@ -49,30 +50,38 @@ jobs:
           node-version: '20'
 
       - name: Install git-cliff
+        shell: pwsh
         run: npm install -g git-cliff
 
       - name: Generate CHANGELOG.md files
+        shell: pwsh
         run: |
           npx git-cliff --config cliff.toml --output CHANGELOG.md
-          ls
-          cd electron-app && npx git-cliff --config ../cliff.toml --output CHANGELOG.md
-          ls
-          cd ..
-          cd electron-app/icons && npx git-cliff --config ../../cliff.toml --output CHANGELOG.md
-          ls
-          cd ../..
-          cd electron-app/libs && npx git-cliff --config ../../cliff.toml --output CHANGELOG.md
-          ls
-          cd ../..
-          cd electron-app/screenshots && npx git-cliff --config ../../cliff.toml --output CHANGELOG.md
-          ls
-          cd ../..
-          cd electron-app/tests && npx git-cliff --config ../../cliff.toml --output CHANGELOG.md
-          ls
-          cd ../..
-          cd electron-app/utils && npx git-cliff --config ../../cliff.toml --output CHANGELOG.md
-          ls
-          cd ../..
+          Get-ChildItem -Name
+          Push-Location electron-app
+          npx git-cliff --config ../cliff.toml --output CHANGELOG.md
+          Get-ChildItem -Name
+          Pop-Location
+          Push-Location electron-app/icons
+          npx git-cliff --config ../../cliff.toml --output CHANGELOG.md
+          Get-ChildItem -Name
+          Pop-Location
+          Push-Location electron-app/libs
+          npx git-cliff --config ../../cliff.toml --output CHANGELOG.md
+          Get-ChildItem -Name
+          Pop-Location
+          Push-Location electron-app/screenshots
+          npx git-cliff --config ../../cliff.toml --output CHANGELOG.md
+          Get-ChildItem -Name
+          Pop-Location
+          Push-Location electron-app/tests
+          npx git-cliff --config ../../cliff.toml --output CHANGELOG.md
+          Get-ChildItem -Name
+          Pop-Location
+          Push-Location electron-app/utils
+          npx git-cliff --config ../../cliff.toml --output CHANGELOG.md
+          Get-ChildItem -Name
+          Pop-Location
 
       - name: Create Pull Request for changelogs
         uses: peter-evans/create-pull-request@271a8d0340265f705b14b6d32b9829c1cb33d45e # v7.0.8
@@ -89,37 +98,46 @@ jobs:
         if: success()
         env:
           GH_TOKEN: ${{ github.token }}
+        shell: pwsh
         run: |
-          echo '{
+          $body = @'
+          {
             "status": "in_progress",
             "output": {
               "title": "Update ChangeLogs",
               "summary": "Changelogs generated. Creating PR..."
             }
-          }' | gh api -X PATCH -H "Accept: application/vnd.github+json" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/${{ github.repository }}/check-runs/$CHECKID --input -
+          }
+          '@
+          $body | gh api -X PATCH -H "Accept: application/vnd.github+json" `
+            -H "X-GitHub-Api-Version: 2022-11-28" `
+            /repos/${{ github.repository }}/check-runs/$env:CHECKID --input -
 
       - name: Complete Check Run
         if: always()
         env:
           GH_TOKEN: ${{ github.token }}
+        shell: pwsh
         run: |
-          echo '{
+          $body = @'
+          {
             "conclusion": "success",
             "output": {
               "title": "Update ChangeLogs",
               "summary": "Changelog update workflow completed successfully."
             }
-          }' | gh api -X PATCH -H "Accept: application/vnd.github+json" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/${{ github.repository }}/check-runs/$CHECKID --input -
+          }
+          '@
+          $body | gh api -X PATCH -H "Accept: application/vnd.github+json" `
+            -H "X-GitHub-Api-Version: 2022-11-28" `
+            /repos/${{ github.repository }}/check-runs/$env:CHECKID --input -
 
       - name: Add Job Summary
         if: always()
+        shell: pwsh
         run: |
-          echo "## 📝 Changelog Update Workflow Summary" >> $GITHUB_STEP_SUMMARY
-          echo "- CHANGELOG.md files were generated or updated in the repository and subfolders." >> $GITHUB_STEP_SUMMARY
-          echo "- A pull request was created or updated with the new changelogs." >> $GITHUB_STEP_SUMMARY
-          echo "- Check runs were updated to reflect the workflow status." >> $GITHUB_STEP_SUMMARY
-          echo "- Workflow completed with status: ${{ job.status }}" >> $GITHUB_STEP_SUMMARY
+          Add-Content -Path $env:GITHUB_STEP_SUMMARY "## 📝 Changelog Update Workflow Summary"
+          Add-Content -Path $env:GITHUB_STEP_SUMMARY "- CHANGELOG.md files were generated or updated in the repository and subfolders."
+          Add-Content -Path $env:GITHUB_STEP_SUMMARY "- A pull request was created or updated with the new changelogs."
+          Add-Content -Path $env:GITHUB_STEP_SUMMARY "- Check runs were updated to reflect the workflow status."
+          Add-Content -Path $env:GITHUB_STEP_SUMMARY "- Workflow completed with status: ${{ job.status }}"
